Fix Landscape Overflow

--- a/cssFile/about.css
+++ b/cssFile/about.css
@@ -53,21 +53,6 @@
     }
 }
 
-@media (max-width: 975px) and (orientation: landscape) {
-    .about{
-        height: 100vh;
-    }
-    
-    .about .content{
-        padding-top: 20px;
-    }
-    
-    .text{
-        font-size: 20px;
-        max-width: 450px;
-    }
-}
-
 @media (max-width: 800px){
     .about{
         height: 80vh;
@@ -118,3 +103,8 @@
     }
 }
 
+@media (max-width: 975px) and (orientation: landscape) {
+    .about{
+        height: 100vh;
+    }
+}
